fixed border for admin login screen in windows high contrast mode

--- a/client/scss/layouts/_login.scss
+++ b/client/scss/layouts/_login.scss
@@ -65,6 +65,10 @@
       max-width: calc(theme('spacing.32') * 3.5);
       padding: theme('spacing.12') theme('spacing.14');
     }
+
+    @media (forced-colors: active) {
+      border: 5px solid transparent;
+    }
   }
 
   h1 {
